about content change

--- a/index.html
+++ b/index.html
@@ -1461,42 +1461,26 @@
                           <p
                             class="elementor-heading-title elementor-size-default"
                           >
-                            In the crypto realm of meme magic, a new legend
-                            unfolds: $AI, the Crypto Maestro, embarks on a quest
-                            for the 6 Blockchain Tokens to craft the notorious
-                            '$AI,' the ultimate token destroyer. 🚀 First, he
-                            ventures into Hodltopia, a place where tokens are
-                            more volatile than a rollercoaster ride.
+                            Autistic Intelligence $AI isn't just a
+                            cryptocurrency; it's a revolutionary force born at
+                            the intersection of innovation and inclusivity.
+                            Embracing the extraordinary, we believe in the
+                            inherent strength found within diverse minds. $AI is
+                            a beacon for those who recognize the beauty of
+                            uniqueness and the boundless possibilities it brings
+                            to the world of decentralized finance.
                             <br />
                             <br />
-                            $AI takes on Shiba Inu, guardian of the first token,
-                            and out-hodls him in a trading battle. 💹 He then
-                            tackles the FUD Forest, a wilderness of bearish
-                            trends colder than an Arctic breeze. The FOMO Frogs
-                            defend the second token, but $AI's decentralized
-                            strategies outsmart them all. <br />
-                            <br />
-
-                            🐸 The NFT Nebula comes next, a cosmic space where
-                            tokens are more abstract than digital art. $AI's
-                            charisma convinces the NFT King to hand over the
-                            Token of Uniqueness. 🌌 In the Mainstream Mines,
-                            where only well-known tokens survive, $AI's
-                            innovation wins the Token of Recognition. <br />
-                            <br />
-                            At the Elon's Lair, he faces Musk's memes and
-                            creates the memest of them all, winning the Token of
-                            Influence. 🚀🌍 Finally, he enters the Secret Shiba
-                            Sanctuary, outwits the Great CryptoCraft, and claims
-                            the Token of Shiba Supremacy. 🐕💎 With all six
-                            Blockchain Tokens, $AI forges the '$AI' but chooses
-                            not to unleash chaos. He realizes cryptocurrencies
-                            bring financial growth and community, and uses '$AI'
-                            to protect them. 🔒💰 $AI, the Crypto Guardian,
-                            ensures the cryptoverse thrives for generations, and
-                            they all hodl, trading tokens and laughing until
-                            their wallets can't handle any more gains. 🚀💸
-                            #CryptoLegend #$AIGame
+                            In a landscape often dominated by uniformity,
+                            Autistic Intelligence $AI stands apart as a
+                            celebration of the spectrum of human intelligence.
+                            We are more than a token; we are a community that
+                            cherishes the mosaic of perspectives each individual
+                            contributes. By intertwining the remarkable
+                            strengths of the autism spectrum with the limitless
+                            potential of blockchain technology, we forge a path
+                            toward a future where every voice is heard,
+                            respected, and valued.
                           </p>
                         </div>
                       </div>
