--- a/index.html
+++ b/index.html
@@ -867,6 +867,13 @@
       data-elementor-post-type="page"
     >
       <section
+        style="
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.5),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(./images/back.webp);
+        "
         class="elementor-section elementor-top-section elementor-element elementor-element-341ce682 elementor-section-full_width elementor-section-height-default elementor-section-height-default"
         data-id="341ce682"
         data-element_type="section"
@@ -1102,6 +1109,13 @@
         </div>
       </section>
       <section
+        style="
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.5),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(./images/back.webp);
+        "
         class="elementor-section elementor-top-section elementor-element elementor-element-42fe8509 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
         data-id="42fe8509"
         data-element_type="section"
@@ -1117,7 +1131,7 @@
             loop
           ></video>
         </div>
-        <div class="elementor-background-overlay"></div>
+        <!-- <div class="elementor-background-overlay"></div> -->
         <div class="elementor-container elementor-column-gap-default">
           <div
             class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-79131d08 column"
@@ -1189,6 +1203,13 @@
         </div>
       </section>
       <section
+        style="
+          background-image: linear-gradient(
+              rgba(0, 0, 0, 0.5),
+              rgba(0, 0, 0, 0.5)
+            ),
+            url(./images/back.webp);
+        "
         class="elementor-section elementor-top-section elementor-element elementor-element-aaa0d9f elementor-section-full_width elementor-section-height-default elementor-section-height-default"
         data-id="aaa0d9f"
         data-element_type="section"
