--- a/index.html
+++ b/index.html
@@ -992,7 +992,9 @@
                       <li
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-40"
                       >
-                        <a href="tglink" class="elementor-item"
+                        <a
+                          href="https://t.me/autistintel"
+                          class="elementor-item"
                           ><span
                             style="
                               background-color: white;
@@ -1006,7 +1008,9 @@
                       <li
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41"
                       >
-                        <a href="twitterlink" class="elementor-item"
+                        <a
+                          href="https://twitter.com/AutistIntel"
+                          class="elementor-item"
                           ><span
                             style="
                               background-color: white;
@@ -1072,7 +1076,10 @@
                       <li
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-40"
                       >
-                        <a href="tglink" class="elementor-item" tabindex="-1"
+                        <a
+                          href="https://t.me/autistintel"
+                          class="elementor-item"
+                          tabindex="-1"
                           ><span
                             style="
                               background-color: white;
@@ -1087,7 +1094,7 @@
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-41"
                       >
                         <a
-                          href="twitterlink"
+                          href="https://twitter.com/AutistIntel"
                           class="elementor-item"
                           tabindex="-1"
                           ><span
@@ -2809,7 +2816,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-a52c805"
-                                href="twitterlink"
+                                href="https://twitter.com/AutistIntel"
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
@@ -2821,7 +2828,7 @@
                             <span class="elementor-grid-item">
                               <a
                                 class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-a02cc06"
-                                href="tglink"
+                                href="https://t.me/autistintel"
                                 target="_blank"
                               >
                                 <span class="elementor-screen-only"
