--- a/index.html
+++ b/index.html
@@ -3030,7 +3030,7 @@
                     style="border-radius: 12px"
                     width="800"
                     height="759"
-                    src="./images/logo.png"
+                    src="./images/main.jpg"
                     class="attachment-large size-large wp-image-168"
                     alt=""
                     sizes="(max-width: 800px) 100vw, 800px"
